--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "scripts": {
     "start": "node server.js"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "mongoose": "^7.0.0"
+  }
 }
 
